--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,11 @@
     package="com.example.mastermind.praktikumandroid" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/spraktikum_launcher"
-        android:label="@string/app_name"
         android:theme="@style/App_TB_Theme" >
         <activity
             android:name=".MainActivity"
@@ -41,7 +39,7 @@
 
 
         <service
-            android:name="com.example.mastermind.praktikumandroid.CheckServerService"
+            android:name="com.example.mastermind.praktikumandroid.notificationServis.CheckForNewOnlineItems_Service"
             android:enabled="true"
             android:exported="false"
             android:icon="@drawable/ic_action_sercheck"
